--- a/app_pisos/html/launiónCity.html
+++ b/app_pisos/html/launiónCity.html
@@ -17,7 +17,7 @@
         <div class="row mt-5">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/Kj0WWEPawtibM0bh.png" class="img-fluid" alt="Pequeña casa acogedora en alquiler">
+                    <img src="Image/v21.jpg" class="img-fluid" alt="Pequeña casa acogedora en alquiler">
                     <div class="card-body">
                         <h5 class="card-title text-center">Pequeña casa acogedora en alquiler</h5>
                         <p class="card-text text-center">Ideal para una persona o pareja que busca un lugar acogedor y económico para vivir.</p>
@@ -26,7 +26,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/QtcdRSPLdTTPupPU.png" class="img-fluid" alt="Disfrute de la serenidad del hogar">
+                    <img src="Image/1.13.jpg" class="img-fluid" alt="Disfrute de la serenidad del hogar">
                     <div class="card-body">
                         <h5 class="card-title text-center">Disfrute, de la serenidad del hogar</h5>
                         <p class="card-text text-center">Esta encantadora casa cuenta con un hermoso patio perfecto para relajarse.</p>
@@ -35,7 +35,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/Gix5dmDfEoByoUof.png" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/1.19.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">La casa de sus sueños le espera</h5>
                         <p class="card-text text-center">Oportunidad excepcional de hacer suya o alquilar esta casa encantadora y accesible.</p>
@@ -45,7 +45,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/OIP (1).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/-11.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Encuentra tu hogar ideal, alquila una casa con nosotros</h5>
                         <p class="card-text text-center">Da la bienvenida a un mundo de posibilidades donde cada casa es una invitación a vivir plenamente.</p>
@@ -66,7 +66,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/OIP (3).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/q10.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Tu hogar temporal te espera, con nosotros, ven y alquila hoy</h5>
                         <p class="card-text text-center"> Experimenta la libertad de vivir sin ataduras en un espacio que se siente como tuyo desde el inicio.</p>
@@ -76,7 +76,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/OIP (4).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/ss11.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Descubre el confort de un hogar lejos de casa, alquila con nosotros</h5>
                         <p class="card-text text-center"> Desde el primer paso hasta el último, sentirás que has encontrado tu lugar en el mundo.</p>
@@ -86,7 +86,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/OIP (5).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/-14.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Tu próximo hogar está a solo un alquiler de distancia</h5>
                         <p class="card-text text-center">Haz realidad tus sueños de un hogar perfecto en un lugar donde cada detalle está diseñado pensando en ti.</p>
@@ -96,7 +96,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/OIP.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/3.2.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Transforma cuatro paredes en tu hogar dulce hogar. ¡Encuéntralo aquí!</h5>
                         <p class="card-text text-center">Desde la decoración hasta los pequeños detalles, cada casa es una tela en blanco esperandote.</p>
@@ -117,7 +117,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A2.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/M11.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Donde los sueños encuentran su dirección</h5>
                         <p class="card-text text-center">Con una variedad de opciones que se adaptan a todos los presupuestos y preferencias, encontrarás la llave de tu felicidad en nuestras manos expertas.</p>
@@ -127,7 +127,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A3.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/M17.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Haz realidad tus sueños de hogar. ¡Alquila con confianza!</h5>
                         <p class="card-text text-center"> El hogar de tus sueños te espera a la vuelta de la esquina donde puedes encontrar tu felicidad junto a tu familia.</p>
@@ -147,7 +147,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A5.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/q19.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Encuentra la comodidad que mereces. ¡Alquila tu próximo hogar con nosotros!</h5>
                         <p class="card-text text-center"> Con una amplia gama de opciones que se adaptan a todos los estilos de vida, encontrarás el refugio perfecto para relajarte y recargarte.</p>
@@ -167,7 +167,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A7.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/q21.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Donde cada casa cuenta una historia. ¡Haz la tuya la próxima!</h5>
                         <p class="card-text text-center"> Abre la puerta a un mundo de posibilidades donde la felicidad se encuentra en cada esquina.</p>
@@ -177,7 +177,7 @@
  
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A8.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/q1.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Descubre el placer de volver a casa.¡Encuentra tu alquiler perfecto!</h5>
                         <p class="card-text text-center">Descubre una selección de casas que son mucho más que cuatro paredes.</p>
@@ -207,7 +207,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A11.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/v11.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Tu próximo hogar está a solo un paso de distancia</h5>
                         <p class="card-text text-center">Encuentra el hogar que refleje tu estilo y se adapte a tus necesidades.</p>
@@ -217,7 +217,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A12.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/v23.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Encuentra tu refugio perfecto</h5>
                         <p class="card-text text-center">Descubre un mundo de posibilidades para ti y tu linda familia.</p>
