--- a/app_pisos/html/cabañasCity.html
+++ b/app_pisos/html/cabañasCity.html
@@ -17,7 +17,7 @@
         <div class="row mt-5">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/Kj0WWEPawtibM0bh.png" class="img-fluid" alt="Pequeña casa acogedora en alquiler">
+                    <img src="Image/1.11.jpg" class="img-fluid" alt="Pequeña casa acogedora en alquiler">
                     <div class="card-body">
                         <h5 class="card-title text-center">Pequeña casa acogedora en alquiler</h5>
                         <p class="card-text text-center">Ideal para una persona o pareja que busca un lugar acogedor y económico para vivir.</p>
@@ -26,7 +26,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/QtcdRSPLdTTPupPU.png" class="img-fluid" alt="Disfrute de la serenidad del hogar">
+                    <img src="Image/2.9.jpg" class="img-fluid" alt="Disfrute de la serenidad del hogar">
                     <div class="card-body">
                         <h5 class="card-title text-center">Disfrute, de la serenidad del hogar</h5>
                         <p class="card-text text-center">Esta encantadora casa cuenta con un hermoso patio perfecto para relajarse.</p>
@@ -35,7 +35,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/Gix5dmDfEoByoUof.png" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/3.11.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">La casa de sus sueños le espera</h5>
                         <p class="card-text text-center">Oportunidad excepcional de hacer suya o alquilar esta casa encantadora y accesible.</p>
@@ -45,7 +45,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/OIP (1).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/3.9.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Encuentra tu hogar ideal, alquila una casa con nosotros</h5>
                         <p class="card-text text-center">Da la bienvenida a un mundo de posibilidades donde cada casa es una invitación a vivir plenamente.</p>
@@ -66,7 +66,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/OIP (3).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/A12.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Tu hogar temporal te espera, con nosotros, ven y alquila hoy</h5>
                         <p class="card-text text-center"> Experimenta la libertad de vivir sin ataduras en un espacio que se siente como tuyo desde el inicio.</p>
@@ -76,7 +76,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/OIP (4).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/A8.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Descubre el confort de un hogar lejos de casa, alquila con nosotros</h5>
                         <p class="card-text text-center"> Desde el primer paso hasta el último, sentirás que has encontrado tu lugar en el mundo.</p>
@@ -86,7 +86,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/OIP (5).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/M10.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Tu próximo hogar está a solo un alquiler de distancia</h5>
                         <p class="card-text text-center">Haz realidad tus sueños de un hogar perfecto en un lugar donde cada detalle está diseñado pensando en ti.</p>
@@ -96,7 +96,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/OIP.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/M11.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Transforma cuatro paredes en tu hogar dulce hogar. ¡Encuéntralo aquí!</h5>
                         <p class="card-text text-center">Desde la decoración hasta los pequeños detalles, cada casa es una tela en blanco esperandote.</p>
@@ -106,7 +106,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A1.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/M1.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Dale vida a tu espacio. ¡Alquila una de nuestras casas y hazla tuya!</h5>
                         <p class="card-text text-center">Descubre un mundo de posibilidades donde cada espacio es una oportunidad para expresar tu estilo único.</p>
@@ -147,7 +147,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A5.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Imagen/c10.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Encuentra la comodidad que mereces. ¡Alquila tu próximo hogar con nosotros!</h5>
                         <p class="card-text text-center"> Con una amplia gama de opciones que se adaptan a todos los estilos de vida, encontrarás el refugio perfecto para relajarte y recargarte.</p>
@@ -207,7 +207,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A11.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/M18.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Tu próximo hogar está a solo un paso de distancia</h5>
                         <p class="card-text text-center">Encuentra el hogar que refleje tu estilo y se adapte a tus necesidades.</p>
@@ -217,7 +217,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/A12.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <img src="Image/OIP (5).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
                         <h5 class="card-title text-center">Encuentra tu refugio perfecto</h5>
                         <p class="card-text text-center">Descubre un mundo de posibilidades para ti y tu linda familia.</p>
